+ max tire size

--- a/detail-page/maximum-tire-size-on-15-inch-rims-2inch-lift.html
+++ b/detail-page/maximum-tire-size-on-15-inch-rims-2inch-lift.html
@@ -25,10 +25,10 @@
   <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  Fuel Injector Cleaning " />
-  <meta property="og:description" content="  scrub a dub dub " />
+  <meta property="og:title" content="  Maximum Tire Size on 15 inch Rims &amp; 2inch Lift " />
+  <meta property="og:description" content="  short answer: 28&quot;, 205/75r15 " />
   <meta name="google-site-verification" content="cAoAzBKndIH-Pn4IS2m2kYgLKt-jQEGGcPpMaHA6sjw" />
-    <meta property="og:image" content="/static/img/guides/injectorCleansingProcedure1.jpg" />
+    <meta property="og:image" content="/static/img/guides/gl-placeholder.jpg" />
 
 
 </head>
@@ -57,18 +57,18 @@
 
 
     <section class="details">
-        <h1 class="details-headline">Fuel Injector Cleaning</h1>
+        <h1 class="details-headline">Maximum Tire Size on 15 inch Rims &amp; 2inch Lift</h1>
          <p class="details-author">by   <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
           Loyale 2.7 Turbo
           </a>
 
           </p>
-          <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>
-          <a href="/static/archive/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="https://www.ultimatesubaru.org/forum/topic/123194-maximum-tire-size-on-15-rims-2-lift/" class="btn grey-background">Link</a>
+          <a href="/static/archive/GLMaximumTiresize2InchLift-UltimateSubaruMessageBoard.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/injectorCleansingProcedure1.jpg">
-            
+            <img  src="/static/img/guides/gl-placeholder.jpg">
+            <p>USMB Thread on maximum rubber with a 2" lift.</p>
         </div>
     </section>
 
