--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
-              <option value="GENERIC INFO">GENERIC INFO</option>
               <option value="CROSSTREK">CROSSTREK</option>
               <option value="L-SERIES">L-SERIES</option>
+              <option value="GENERIC INFO">GENERIC INFO</option>
               <option value="EJ22">EJ22</option>
               <option value="FORESTER">FORESTER</option>
           </select>
@@ -85,26 +85,26 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-category="Generic Info" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
 
               <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
-                <div class="card-title">Tube Bending 101</div>
-                <div class="card-description">pirate4x4 tech</div>
+                <!--<div class="card-id">Crosstrek</div> -->
+                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
+                <div class="card-title">Bumper Cutting</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="Safe Recovery Technique">
+          <div style="background-image: url('/static/img/guides/gl-placeholder.jpg');" class="item h2 w4" data-category="L-series" data-description="short answer: 28&quot;, 205/75r15" data-title="Maximum Tire Size on 15 inch Rims &amp; 2inch Lift">
 
               <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
-                <div class="card-title">Safe Recovery Technique</div>
-                <div class="card-description"></div>
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/maximum-tire-size-on-15-inch-rims-2inch-lift.html"> <div class="item-content">
+                <div class="card-title">Maximum Tire Size on 15 inch Rims &amp; 2inch Lift</div>
+                <div class="card-description">short answer: 28&quot;, 205/75r15</div>
                 </a>
                 </div>
               </div>
@@ -124,12 +124,51 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
+          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
 
               <div class="card">
-                <!--<div class="card-id">Crosstrek</div> -->
-                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
-                <div class="card-title">Bumper Cutting</div>
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
+                <div class="card-title">Haynes Weber Carburator Manual</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="Safe Recovery Technique">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
+                <div class="card-title">Safe Recovery Technique</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-category="Generic Info" data-description="pirate4x4 tech" data-title="Tube Bending 101">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/tube-bending-101.html"> <div class="item-content">
+                <div class="card-title">Tube Bending 101</div>
+                <div class="card-description">pirate4x4 tech</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -150,19 +189,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/bleepinjeepcbtune.png');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="VIDEO: How-To Tune a CB Antennae">
 
               <div class="card">
@@ -176,12 +202,25 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
+          <div style="background-image: url('/static/img/guides/mtnroo.png');" class="item h2 w4" data-category="generic info" data-description="4x4 subaru groups" data-title="Communities">
 
               <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
-                <div class="card-title">Haynes Weber Carburator Manual</div>
+                <!--<div class="card-id">generic info</div> -->
+                <a href="./detail-page/communities.html"> <div class="item-content">
+                <div class="card-title">Communities</div>
+                <div class="card-description">4x4 subaru groups</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Intake">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-intake.html"> <div class="item-content">
+                <div class="card-title">DIY: Intake</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -228,32 +267,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/mtnroo.png');" class="item h2 w4" data-category="generic info" data-description="4x4 subaru groups" data-title="Communities">
-
-              <div class="card">
-                <!--<div class="card-id">generic info</div> -->
-                <a href="./detail-page/communities.html"> <div class="item-content">
-                <div class="card-title">Communities</div>
-                <div class="card-description">4x4 subaru groups</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Intake">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-intake.html"> <div class="item-content">
-                <div class="card-title">DIY: Intake</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
@@ -274,19 +287,6 @@
                 <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
                 <div class="card-title">Rear e-Brake Retrofit </div>
                 <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-category="Generic Info" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
-                <div class="card-title">Fuel Injector Cleaning</div>
-                <div class="card-description">scrub a dub dub</div>
                 </a>
                 </div>
               </div>
@@ -332,38 +332,38 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
-                <div class="card-title">DIY Head Porting</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Hitachi Carb Rebuild">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
-                <div class="card-title">Hitachi Carb Rebuild</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/SFForesterSumpGuard.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="Forester Skid Plate BluePrint">
 
               <div class="card">
                 <!--<div class="card-id">Forester</div> -->
                 <a href="./detail-page/forester-skid-plate-blueprint.html"> <div class="item-content">
                 <div class="card-title">Forester Skid Plate BluePrint</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-category="Generic Info" data-description="scrub a dub dub" data-title="Fuel Injector Cleaning">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/fuel-injector-cleaning.html"> <div class="item-content">
+                <div class="card-title">Fuel Injector Cleaning</div>
+                <div class="card-description">scrub a dub dub</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
+                <div class="card-title">DIY Head Porting</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -384,13 +384,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-category="L-series" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Hitachi Carb Rebuild">
 
               <div class="card">
                 <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
-                <div class="card-title">How To Keep Your Subaru Alive</div>
-                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
+                <div class="card-title">Hitachi Carb Rebuild</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -423,6 +423,32 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/L-seriesWorkshopManual.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="L-series Workshop Manual">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/l-series-workshop-manual.html"> <div class="item-content">
+                <div class="card-title">L-series Workshop Manual</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-category="L-series" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
+                <div class="card-title">How To Keep Your Subaru Alive</div>
+                <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
 
               <div class="card">
@@ -449,12 +475,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/L-seriesWorkshopManual.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="L-series Workshop Manual">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/l-series-workshop-manual.html"> <div class="item-content">
-                <div class="card-title">L-series Workshop Manual</div>
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
+                <div class="card-title">1985-96 Engine Torque Specs</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -501,19 +527,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
-                <div class="card-title">1985-96 Engine Torque Specs</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
       </div>
       <div id="noResults"></div>
     </section>
@@ -528,7 +541,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.19.18-13.27</p>
+      <p >v1-09.24.18-20.56</p>
     </a>
   </footer>
 
